--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/bcrypt": "^5.0.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
